--- a/Curso JavaScript/basicos.html
+++ b/Curso JavaScript/basicos.html
@@ -123,16 +123,18 @@ Sino
 
  let parcial,final,promedio;
 
+ let parcial,final,promedio;
+
  parcial = parseFloat(prompt("Parcial"));
  final = parseFloat(prompt("Final"));
  promedio = (parcial + final) / 2;
 
- if (promedio === "") {
-  console.log(`El promedio es ${promedio}, NO ingresó sus notas.`)
- } if (promedio >= 3.5) {
+ if (promedio >= 3.5) {
   console.log(`El promedio es ${promedio}, APROBADO ♥`)
- } else {
+ } if (promedio <=3.4) {
   console.log(`El promedio es ${promedio}, DESAPROBADO ☺`)
+ } if (isNaN(promedio)) {
+  console.error(`Caracter inválido, ingrese la nota parcial y final para definir su promedio.`)
  }
 
 
@@ -151,8 +153,33 @@ Sino
   console.log("la documentanción por favor")
  }
  
- 
 
+		
+// COMPRAR HELADO CON TOPPING
+
+let topping = window.prompt("¿Qué topping desea en su helado?")
+let precio = 0.00;
+let helado = 1.90;
+let precioFinal = 0.00;
+
+if (topping == "oreo") {
+  precio = 1;
+} else if (topping == "chispitas") {
+  precio = 1.50;
+} else if (topping == "brownie") {
+  precio = 0.75;
+} else if (topping == "mani") {
+  precio = 0.95;
+} else {
+  precio = 0;
+  console.log(`No tenemos ${topping} disponible en nuestro menú.`);
+}
+
+/* debe ser helado + precio porque "precio" es igual 
+al topping seleccionado más el costo del helado */
+
+precioFinal = helado + precio; 
+console.log(`El helado cuesta $${precioFinal} US`)		
  
 
 
